# new-cpp-project

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  ROADMAP.md  _USING_THIS_TEMPLATE.md
.github/: labeler.yml  launch-tests
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-clang.yml  linux-gcc.yml  msvc.yml  release.yml
dependencies/: CMakeLists.txt
include/: Configuration.hpp.in
src/: main.cpp
